--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ author:
       url: "https://github.com/SimonLee-7"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://instagram.com/blackjiin.w"
 
 # Site Footer
 footer:
@@ -131,7 +131,7 @@ footer:
       url: "https://github.com/SimonLee-7"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url:
+      url: "https://instagram.com/blackjiin.w"
 
 
 # Reading Files
