--- a/_config.yml
+++ b/_config.yml
@@ -112,16 +112,16 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url:  "mailto:ninjakyle2470@gmail.com"
+      url:  "mailto:ninjakyle@naver.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
+      url: "https://SimonLee-7.github.io"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/SimonLee-7"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://instagram.com/blackjiin.w"
 
 # Site Footer
 footer:
@@ -131,7 +131,7 @@ footer:
       url: "https://github.com/SimonLee-7"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url:
+      url: "https://instagram.com/blackjiin.w"
 
 
 # Reading Files
