--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url:  "mailto:ninjakyle@naver.com"
+      url:  "mailto:ninjakyle@email.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://SimonLee-7.github.io"
